# jsonproto

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  python-app.yml  release.yml
jsonproto/: jsonproto.py
test/: sanity_test.py
