[build-system]
requires = ["setuptools>=67.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonproto"
version = "0.0.2"
readme = "README.md"
authors = [{name = "Jimmy Wahlberg", email = "jimmy.wahlberg@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "protobuf",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
    "ruff",
]

[project.scripts]
jsonproto = "jsonproto.jsonproto:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}
